# ledger-extract

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260518_0001_initial.py
backend/data/samples/: ground_truth.json
backend/scripts/: ingest_samples.py  run_regression.py  seed_samples.py
backend/src/extraction/: db.py  main.py  models.py  schemas.py  worker.py
backend/src/extraction/api/: documents.py  eval.py  health.py  review.py
backend/src/extraction/core/: config.py  logging.py
backend/src/extraction/extract/: confidence.py  invoice.py  llm_extract.py  prompts.py
backend/src/extraction/ocr/: tesseract.py
backend/src/extraction/tasks/: extract.py
backend/tests/: conftest.py  test_confidence.py  test_invoice_schema.py  test_prompts.py
docs/: architecture.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/queue/: page.tsx
frontend/app/review/[id]/: page.tsx
frontend/app/upload/: page.tsx
frontend/app/vendors/: page.tsx
frontend/components/: app-shell.tsx  confidence-bar.tsx  review-form.tsx  status-badge.tsx
frontend/components/ui/: area-chart.tsx  badge.tsx  card.tsx  metric-card.tsx  sparkline.tsx
frontend/lib/: api.ts
