[project]
name = "extraction"
version = "0.1.0"
description = "Event-driven LLM document extraction pipeline with HITL review"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "anthropic>=0.40",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "tenacity>=9.0",
    "structlog>=24.4",
    "pdf2image>=1.17",
    "pytesseract>=0.3.13",
    "pypdf>=5.1",
    "pillow>=11.0",
    "fpdf2>=2.8",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "A", "C4", "T20", "SIM", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "T20"]
"scripts/*" = ["T20"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "pdf2image.*", "pytesseract.*", "pypdf.*", "fpdf.*", "PIL.*", "dateutil.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
